--- a/app/src/main/res/layout/note.xml
+++ b/app/src/main/res/layout/note.xml
@@ -7,7 +7,7 @@
     android:layout_height="120dp"
     android:layout_gravity="center_horizontal"
     android:layout_margin="10dp"
-    android:background="#FFF9D7"
+    android:background="@drawable/postit"
     android:padding="10dp">
 
     <TextView
